--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             width: 100%;
             height: 100%;
             padding: 0;
-            background-image: url('/img/좀비머쉬맘.webp');  /* 이미지 경로로 변경 */
+            background-image: url('./img/좀비머쉬맘.webp');  /* 이미지 경로로 변경 */
             background-repeat: no-repeat;
             background-size: cover;
             border: none;
@@ -98,7 +98,7 @@
             <textarea id="alert-container" readonly></textarea>
         </div>
     </div>
-    <audio id="alarm" src="/sound/beep.mp3" preload="auto"></audio>
+    <audio id="alarm" src="./sound/beep.mp3" preload="auto"></audio>
     <script>
         const timers = Array.from({ length: 8 }, () => Array(5).fill(null));
         const outputTextArea = document.getElementById('output');
